# rss2podcast

./: .gitignore  Dockerfile  Jenkinsfile  LICENSE  README.md  config.sample.yaml  pyproject.toml
src/rss2podcast/: __main__.py  config.py  extract.py  feed.py  pipeline.py  publish.py  state.py  tts.py
src/rss2podcast/templates/: style.py
tests/: test_config.py  test_extract.py  test_publish.py  test_state.py  test_tts.py
